2007-09-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* configure.ac:

	Bump up the version to 0.2.

2007-09-18  Zeeshan Ali  <zeenix@gstreamer.net>

	* README:
	
	Update the README.

2007-09-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-universal-cp.glade:

	Quit menuitem calls application_exit() instead of gtk_main_quit() on
	activation.

2007-09-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-detailstreeview.c:
	* src/universal-cp-devicetreeview.c:
	* src/universal-cp-eventtreeview.c:
	* src/universal-cp-gui.c:

	- Explicitly destroy the main window.
	- Don't leak the treemodels.

2007-09-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp.c:

	Search for "upnp:rootdevice" rather than "ssdp:all".

2007-09-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-devicetreeview.c:

	Fix some resource ref and GList leakage.

2007-09-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-gui.c:
	* src/universal-cp.c:
	* src/universal-cp.h:

	- The main module exits the mainloop
	- GUI and UPnP objects are destroyed before exiting the mainloop. This
	  is to allow the service proxies to unsubscribe themselves.

2007-09-17  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-upnp.c:

	Print more details on the console for each failed notification.

2007-09-16  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:
	* src/pixmaps/Makefile.am:
	* src/pixmaps/network-light-22x22.png:
	* src/pixmaps/network-light-256x256.png:
	* src/pixmaps/network-light.png:
	* src/xml/network-light-desc.xml:

	Keep the network light icon in two sizes, one small and one big so
	control points have a bit more choice.

2007-09-16  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-icons.c:

	Use LARGE_TOOLBAR as icon size instead of DIALOG when rendering icons
	from stock.

2007-09-16  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-universal-cp.glade:

	Put a little more space between children of action-invocation-table.
